<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/amlvr_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/component_horizontal_padding"
    tools:context=".MainListViewAdapter" >

    <TextView
        android:id="@+id/amlvr_name"
        android:layout_width="wrap_content"
        android:text="@string/temp_amlvr_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/amlvr_race"
        android:text="@string/temp_amlvr_race"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        style="@style/amlvr_small_text" />

    <TextView
        android:id="@+id/amlvr_class"
        android:text="@string/temp_amlvr_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/amlvr_small_text"
        android:layout_toEndOf="@id/amlvr_race" />

    <TextView
        android:id="@+id/amlvr_level"
        android:text="@string/temp_amlvr_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/amlvr_small_text"
        android:layout_toEndOf="@id/amlvr_class"
        android:layout_alignParentEnd="true" />

</RelativeLayout>