<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/abilities_minor_layout"
    android:background="@drawable/border"
    android:padding="10dp"
    android:layout_marginLeft="@dimen/component_horizontal_margin"
    android:layout_marginRight="@dimen/component_horizontal_margin"
    android:elevation="@dimen/elevation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_abilities_minor_fort"
        android:id="@+id/abilities_minor_type"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/abilities_minor_type">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/temp_abilities_minor_value"
            android:layout_alignParentStart="false"
            android:id="@+id/abilities_minor_value"
            android:layout_alignParentEnd="false"
            android:gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:layout_alignTop="@+id/abilities_minor_sub_values_layout"
            android:layout_alignBottom="@+id/abilities_minor_sub_values_layout" />

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_toEndOf="@id/abilities_minor_value"
            android:gravity="center_vertical"
            android:id="@+id/abilities_minor_sub_values_layout">

            <TextView
                style="@style/fcdLabelSmall"
                android:text="@string/label_abilities_minor_sub_level"
                android:id="@+id/abilities_minor_sub_values_level_label"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/temp_abilities_minor_sub_level_value"
                android:id="@+id/abilities_minor_sub_values_level_value"
                android:layout_toEndOf="@id/abilities_minor_sub_values_level_label"
                android:layout_alignParentEnd="false"
                android:layout_alignTop="@+id/abilities_minor_sub_values_level_label"
                android:layout_alignBottom="@+id/abilities_minor_sub_values_level_label"
                android:gravity="center_vertical" />

            <TextView
                style="@style/fcdLabelSmall"
                android:text="@string/label_abilities_minor_sub_ability"
                android:id="@+id/abilities_minor_sub_values_ability_label"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="false"
                android:layout_below="@+id/abilities_minor_sub_values_level_label"
                android:layout_alignTop="@+id/abilities_minor_sub_values_ability_value"
                android:layout_alignBottom="@+id/abilities_minor_sub_values_ability_value"/>

            <EditText
                style="@style/fcdAbilitiesMinorField"
                android:inputType="number"
                android:id="@+id/abilities_minor_sub_values_ability_value"
                android:text="@string/temp_abilities_minor_sub_ability_value"
                android:layout_alignParentEnd="false"
                android:layout_toEndOf="@id/abilities_minor_sub_values_ability_label"
                android:layout_below="@+id/abilities_minor_sub_values_level_value"/>

            <TextView
                style="@style/fcdLabelSmall"
                android:text="@string/label_abilities_minor_sub_class"
                android:id="@+id/abilities_minor_sub_values_class_label"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/abilities_minor_sub_values_ability_label"
                android:layout_alignTop="@+id/abilities_minor_sub_values_class_value"
                android:layout_alignBottom="@+id/abilities_minor_sub_values_class_value"/>

            <EditText
                style="@style/fcdAbilitiesMinorField"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/abilities_minor_sub_values_class_value"
                android:text="@string/temp_abilities_minor_sub_class_value"
                android:layout_below="@+id/abilities_minor_sub_values_ability_value"
                android:layout_alignParentEnd="false"
                android:layout_toEndOf="@id/abilities_minor_sub_values_class_label" />

            <TextView
                style="@style/fcdLabelSmall"
                android:text="@string/label_abilities_minor_sub_feat"
                android:id="@+id/abilities_minor_sub_values_feat_label"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/abilities_minor_sub_values_class_label"
                android:layout_alignTop="@+id/abilities_minor_sub_values_feat_value"
                android:layout_alignBottom="@+id/abilities_minor_sub_values_feat_value"/>

            <EditText
                style="@style/fcdAbilitiesMinorField"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/abilities_minor_sub_values_feat_value"
                android:text="@string/temp_abilities_minor_sub_feat_value"
                android:layout_alignParentEnd="false"
                android:layout_toEndOf="@id/abilities_minor_sub_values_feat_label"
                android:layout_below="@+id/abilities_minor_sub_values_class_value" />

            <TextView
                style="@style/fcdLabelSmall"
                android:text="@string/label_abilities_minor_sub_enh"
                android:id="@+id/abilities_minor_sub_values_enhancement_label"
                android:layout_below="@+id/abilities_minor_sub_values_feat_label"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/abilities_minor_sub_values_enhancement_value"
                android:layout_alignBottom="@+id/abilities_minor_sub_values_enhancement_value"/>

            <EditText
                style="@style/fcdAbilitiesMinorField"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/abilities_minor_sub_values_enhancement_value"
                android:text="@string/temp_abilities_minor_sub_enh_value"
                android:layout_alignParentEnd="false"
                android:layout_toEndOf="@id/abilities_minor_sub_values_enhancement_label"
                android:layout_below="@+id/abilities_minor_sub_values_feat_value" />

            <TextView
                style="@style/fcdLabelSmall"
                android:text="@string/label_abilities_minor_sub_misc"
                android:id="@+id/abilities_minor_sub_values_misc_label"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/abilities_minor_sub_values_enhancement_label"
                android:layout_alignTop="@+id/abilities_minor_sub_values_misc_value"
                android:layout_alignBottom="@+id/abilities_minor_sub_values_misc_value"/>

            <EditText
                style="@style/fcdAbilitiesMinorField"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/abilities_minor_sub_values_misc_value"
                android:text="@string/temp_abilities_minor_sub_misc_value"
                android:layout_below="@+id/abilities_minor_sub_values_enhancement_value"
                android:layout_toEndOf="@id/abilities_minor_sub_values_misc_label"
                android:layout_alignParentEnd="false" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:id="@+id/abilities_minor_layout"-->
    <!--android:background="@drawable/border"-->
    <!--android:padding="10dp"-->
    <!--android:layout_marginLeft="@dimen/component_horizontal_margin"-->
    <!--android:layout_marginRight="@dimen/component_horizontal_margin"-->
    <!--android:elevation="@dimen/elevation"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content">-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/temp_abilities_minor_type"-->
        <!--android:id="@+id/abilities_minor_type"-->
        <!--android:layout_alignParentEnd="false"-->
        <!--android:layout_centerHorizontal="true" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/temp_abilities_minor_value"-->
        <!--android:layout_alignParentStart="false"-->
        <!--android:id="@+id/abilities_minor_value"-->
        <!--android:layout_alignParentEnd="false"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_below="@+id/abilities_minor_type" />-->

<!--</RelativeLayout>-->