<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/abilities_major_layout"
    android:background="@drawable/border"
    android:padding="10dp"
    android:layout_marginLeft="@dimen/component_horizontal_margin"
    android:layout_marginRight="@dimen/component_horizontal_margin"
    android:elevation="@dimen/elevation"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temp_abilities_major_type"
        android:id="@+id/abilities_major_type"
        android:layout_marginRight="10dp"
        android:layout_alignParentStart="true"
        android:labelFor="@+id/abilities_major_value"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:gravity="center"
        android:layout_below="@+id/abilities_major_type"
        android:layout_centerInParent="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/temp_abilities_major_value"
            android:id="@+id/abilities_major_value"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:inputType="number"
            android:background="@drawable/border"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/temp_abilities_major_mod_value"
            android:id="@+id/abilities_major_modifier"
            android:layout_toEndOf="@id/abilities_major_value"
            android:layout_alignParentEnd="false"
            android:layout_alignTop="@+id/abilities_major_value"
            android:layout_alignBottom="@+id/abilities_major_value"
            android:gravity="center" />
    </RelativeLayout>

</RelativeLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:id="@+id/abilities_major_layout"-->
    <!--android:background="@drawable/border"-->
    <!--android:padding="10dp"-->
    <!--android:layout_marginLeft="@dimen/component_horizontal_margin"-->
    <!--android:layout_marginRight="@dimen/component_horizontal_margin"-->
    <!--android:elevation="@dimen/elevation"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content">-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/temp_abilities_major_type"-->
        <!--android:id="@+id/abilities_major_type"-->
        <!--android:layout_alignParentEnd="false"-->
        <!--android:layout_centerHorizontal="true" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="@string/temp_abilities_major_value"-->
        <!--android:layout_alignParentStart="false"-->
        <!--android:id="@+id/abilities_major_value"-->
        <!--android:layout_alignParentEnd="false"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_below="@+id/abilities_major_type" />-->

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
        <!--android:text="@string/temp_abilities_major_mod"-->
        <!--android:id="@+id/abilities_major_modifier"-->
        <!--android:layout_alignParentEnd="false"-->
        <!--android:layout_alignParentStart="false"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_below="@+id/abilities_major_value" />-->
<!--</RelativeLayout>-->